# easy_callect

./: .gitignore  Api.md  README.md  analysis_options.yaml  optimize-svg.sh  pubspec.yaml  svgo.config.js
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/libs/: detection_plugin.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  mock.dart
lib/api/: aibox.dart  animal.dart  behavior.dart  bill.dart  building.dart  camera.dart  combo.dart  common.dart  distinguishRecord.dart  email.dart  health.dart  insurance.dart  intelligencewarn.dart  inventory.dart  message.dart  milksidentify.dart  monitoring.dart  mortgage.dart  my.dart  performanceDetail.dart  pigAnimal.dart  pigRegister.dart  position.dart  precisionBreeding.dart  register.dart  registerRecord.dart  security.dart  user.dart  weight.dart
lib/enums/: StorageKey.dart  index.dart  register.dart  route.dart
lib/models/: PageVo.dart  index.dart
lib/router/: index.dart  routes.dart
lib/store/: appState.dart
lib/utils/: OverlayManager.dart  colors.dart  const.dart  dialog.dart  envConfig.dart  global.dart  icons.dart  init.dart  regExp.dart  storage.dart
lib/widgets/: ActionSheet.dart  LoadingWidget.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
plugins/detection_plugin/src/: CMakeLists.txt  detection_plugin.cpp  detection_plugin.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  (+1 more)
(+206 files in other folders)
